--- a/sass/_board.sass
+++ b/sass/_board.sass
@@ -4,13 +4,9 @@
   
 
 .wrap
-  position: absolute
-  top: 50%
-  left: 50%
-  transform: translate(-50%, -50%)
   width: 80%
-  // height: 80%
-  min-height: 80vh
+  margin: 0 auto
+  padding: 10vh 0
   // filter: blur(2px)
   h1.title
     margin-bottom: 10px
