--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -15,3 +15,4 @@ body
   background-image: url('../img/chicago.jpg')
   background-size: cover
   background-repeat: no-repeat
+  background-attachment: fixed
